--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
                             <textarea type="text" class="form-control" name="message" rows="4"
                                 placeholder="Write your message here" required></textarea>
                         </div>
+                        <div class="col-12 form-group">
+                            <label class="form-label">How did you hear about us?</label>
+                            <div class="form-check form-check-inline">
+                                <label for="inputFunnel" class="form-check-label">Radio</label>
+                                <input type="checkbox" value="radio" class="form-check-input" name="funnel">                                
+                            </div>
+                            <div class="form-check form-check-inline form-check-inline">
+                                <label for="inputFunnel" class="form-check-label">Print</label>
+                                <input type="checkbox" value="print" class="form-check-input" name="funnel">
+                            </div>
+                        </div>
                         <div class="col-12 d-flex justify-content-center pt-2">
                             <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                         </div>
