--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <h1>Contact Form Template</h1>
         <div class="p-3 border border-2 rounded-3 shadow-lg bg-light">
-            <form name="contactForm" class="row g-3 p-2">
+            <form name="contactForm" netlify class="row g-3 p-2">
                 <div class="col12">
                     <div class="row">
                         <div class="col-12 col-md-6 form-group">
